# Jogo-AA-Comp1

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  anim.c  anim.h  common.c  common.h  credits_state.c  credits_state.h  effect.c  effect.h  entity.c  entity.h  game_state.c  main.c  main.h  math.c  math.h  menu_state.c  menu_state.h  meson.build  settings.c  settings.h  sprite.c  sprite.h  stage.c  stage.h  texloader.c  texloader.h  ui.c  ui.h  vecmath.c  vecmath.h  vid.h
assets/: license.txt
assets/background/: background_01.json  background_01.manifest  background_02.json  background_02.manifest  background_03.json  background_03.manifest  background_04.json  background_04.manifest  template.manifest  template.txt
assets/characters/: blood.json  legs.json  legs.manifest  legs_walking.json
assets/characters/badguy01/: entity.manifest  idle.json  idle.manifest  idle.txt  shot.json  shot.manifest  shot.txt  weapon.json  weapon.manifest  weapon.txt
assets/characters/badguy02/: death.json  idle.json  idle.manifest  idle.txt  shot.json  shot.manifest  shot.txt  weapon.json  weapon.manifest  weapon.txt
assets/characters/badguy03/: death.json  idle.json  shot.json  shot.manifest  weapon.json  weapon.manifest
assets/characters/badguy04/: bottle.json  death.json  entity.json  explosion.json  shot.json  weapon.json
assets/characters/barman/: entity.json  entity.manifest  hand.json  hand.manifest  idle.json  idle.manifest
assets/characters/boss/: death.json  entity.json  idle.json  shot_01.json  shot_02.json  weapon.json  weapon_shoot_02.json  (+1 more)
assets/drops/: revolver.manifest  revolver.txt  shotgun.txt
assets/weapons/: knife.json  revolver.json  revolver_bullet.json  revolver_bullet.manifest  revolver_bullet_effect.json  revolver_bullet_effect.manifest  shotgun.json  shotgun.manifest  shotgun_bullet.json  shotgun_bullet.manifest  shotgun_bullet_effect.manifest  shotgun_effect.json  throwing_knives.json
containers/: vector.c  vector.h
data/: data.pak
drivers/: vid_null.c  vid_sdl.c
states/: credits_state.c  credits_state.h  game_state.c  game_state.h  menu_state.c  menu_state.h
states/helpers/: assetloader.c  assetloader.h
(+25 files in other folders)
